--- a/calculator.css
+++ b/calculator.css
@@ -44,7 +44,7 @@ table.cinereousTable {
     font-size: 16px;
   }
 
-td {
+/* td {
     width: 25%;
 }
 
@@ -59,3 +59,4 @@ td {
   height: 40px;
   width: 200px;
 }
+*/
