--- a/calculator.css
+++ b/calculator.css
@@ -1,11 +1,11 @@
-table.cinereousTable {
+/* table.cinereousTable {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     border: 6px solid #948473;
     background-color: #FFE3C6;
     width: 30%;
     height: 500px;
     text-align: center;
-    cursor: pointer;
+    cursor: pointer; */
   }
   table.cinereousTable td, table.cinereousTable th {
     border: 1px solid #948473;
@@ -44,7 +44,7 @@ table.cinereousTable {
     font-size: 16px;
   }
 
-/* td {
+ td {
     width: 25%;
     height: 60px;
 }
@@ -62,4 +62,4 @@ table.cinereousTable {
 background-color: indigo;
 color:grey;
 }
-*/
+
