--- a/calculator.css
+++ b/calculator.css
@@ -63,3 +63,26 @@ background-color: indigo;
 color:grey;
 }
 
+
+/*.threeDiv{
+    /* width: 75%; */
+    height: 10rem;
+    background-color: blufe;
+    /* margin-left: 2rem; */
+    /* padding:7% 15%; */
+
+}
+
+.symbol{
+    /* width: 75%;
+    height: 50px; */
+    /* margin: 0 auto; */
+    background-color: aqufa;
+
+}
+.temp{
+    /* width: 75%;
+    height: 50px; */
+    /* margin: 0 auto; */
+    background-color: bluevioleft;
+}*/
