--- a/calculator.css
+++ b/calculator.css
@@ -1,8 +1,8 @@
-/* table.cinereousTable {
+ table.cinereousTable {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     border: 6px solid #948473;
     background-color: #FFE3C6;
-    width: 30%;
+    width: 30%;/*
     height: 500px;
     text-align: center;
     cursor: pointer; */
