--- a/calculator.css
+++ b/calculator.css
@@ -5,7 +5,7 @@
     width: 30%;/*
     height: 500px;
     text-align: center;
-    cursor: pointer; */
+    cursor: pointer;
   }
   table.cinereousTable td, table.cinereousTable th {
     border: 1px solid #948473;
@@ -19,7 +19,7 @@
     background: -moz-linear-gradient(top, #afa396 0%, #9e9081 66%, #948473 100%);
     background: -webkit-linear-gradient(top, #afa396 0%, #9e9081 66%, #948473 100%);
     background: linear-gradient(to bottom, #afa396 0%, #9e9081 66%, #948473 100%);
-  }
+  }*/
   table.cinereousTable thead th {
     font-size: 17px;
     font-weight: bold;
